--- a/deco.html
+++ b/deco.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="es">
 <head>
   <meta charset="utf-8">
@@ -90,6 +92,7 @@
         <p>Decora tu hogar con un sin fin de objetos </p>
         <div class="icons">
           <a href="nosotros.html" class="btn">Mas informacion</a>
+          
         </div>
       </div>
     
@@ -251,7 +254,7 @@
 
     </div>
 
-    <h1 class="credit"> creado para <a href="#">DecoVintage</a> | derechos reservados </h1>
+    <h1 class="credit"> creado para <a href="jokes.html">DecoVintage</a> | derechos reservados </h1>
 
 </div>
     <!--  footer termina -->
