--- a/nosotros.html
+++ b/nosotros.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -75,11 +75,11 @@
     <div class="col-md-6 info">
       <h2>Ilumina espacios con historia</h2>
       <p>Decora tu hogar con un sin fin de objetos vintage</p>
-      <p>Somos una tienda virtual de decoracion con envios a todo Chile</p>
       <p>Somos un emprendimiento trabajando para traer productos de la mejor calidad desde todo el mundo a nuestros coleccionistas y clientes dentro de Chile. Con más de 3 años de experiencia y cientos de reseñas positivas, le aseguramos una experiencia agradable y satisfaccion total con su compra</p>
-      <p>Si tienes alguna duda no dudes en preguntar, o visitar...</p>
       <div class="icons">
         <a href="preguntas.html" class="btn">Preguntas Frecuentes</a>
+        <div class="icons">
+          <a href="paises.html" class="btn">Busca nuestros paises</a>
       </div>
     </div>
   
