--- a/sign.html
+++ b/sign.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +8,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script language="javascript" type="text/javascript"
+    <script language="javascript"
         src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
     <!--  css -->
     <link href="css/styles.css" rel="stylesheet">
@@ -24,7 +26,7 @@
                     <div class="form-group">
                         <h1>     </h1>
                         <label for="id_txtNickname">Nombre de usuario</label>
-                        <input type="Nickname" name="txtNickname" class="form-control" required=""
+                        <input type="text" name="txtNickname" class="form-control"
                         id="id_txtNickname" placeholder="Ingrese su nombre de usuario">
                     </div>
                     <div class="form-group">
@@ -54,11 +56,6 @@
                                 <label>
                                   <input type="checkbox" class="radio" value="1" name="fooby[1][]" />Otros</label>
                               
-                    <fieldset>
-
-
-
-
                     </div>
                     <div class="form-check">
                         <button class="btn btn-info" type="button" name="showpassword" id="showpassword"
@@ -73,9 +70,9 @@
     </div>
 
     
-    <script src="js/validador.js" type="text/javascript"></script>
-    <script src="js/verPassword.js" type="text/javascript"></script>
-    <script src="js/Check.js" type="text/javascript"></script>
+    <script src="js/validador.js"></script>
+    <script src="js/verPassword.js"></script>
+    <script src="js/Check.js"></script>
 </body>
 
 </html>
