--- a/preguntas.html
+++ b/preguntas.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="es">
   <head>
     <meta charset="UTF-8">
@@ -6,6 +8,7 @@
     <!--  CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Preguntas</title>
    </head>
 <body>
   <div class="accordion">
