--- a/jokes.html
+++ b/jokes.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="css/jokes.css">
 
-    <title> jokes </title>
+    <title> dad jokes </title>
 </head>
 <body>
     <section>
