--- a/paises.html
+++ b/paises.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Country Guide App</title>
+    <title>Paises de nustros productos</title>
     <!--Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
@@ -17,9 +17,9 @@
         <input
           type="text"
           id="country-inp"
-          placeholder="Enter a country name here..."
+          placeholder="INGRESE NOMBRE DE PAIS EN INGLES AQUI..."
         />
-        <button id="search-btn">Search</button>
+        <button id="search-btn">BUSCAR</button>
       </div>
       <div id="result"></div>
     </div>
